--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,21 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "csv-file"
+path = "src/csv-file/main.rs"
+
+[[bin]]
+name = "server"
+path = "src/server/main.rs"
+
+
 [dependencies]
 anyhow = "1.0.79"
+
 # [sic] do not update this until results are checked
 usvg = "0.32.0"
+
+tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
+warp = "0.3.6"
+serde = { version = "1.0.195", features = ["derive"] }
