--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ usvg = "0.32.0"
 tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
 warp = "0.3.6"
 serde = { version = "1.0.195", features = ["derive"] }
+env_logger = "0.10.1"
+log = "0.4.20"
